--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
